js/widgets/site/Lightsquare/_Play/_GamePage/game_page.css
div.game {
	display: flex;
	flex-direction: column;
	flex-grow: 1;
}

input.rematch.rematch_offered {
	box-shadow: 0 0 3px rgba(255, 253, 234, .7);
}

div.game_details {
	margin-left: .8em;
	flex-grow: 1;
}

div.game_board_and_controls {
	display: flex;
	align-items: center;
	justify-content: center;
}

div.game_main {
	display: flex;
	padding: 1em 0;
}

div.game_board {
}

div.game_player {
	font-size: 1.2em;
	display: flex;
	flex-grow: 1;
	justify-content: space-between;
	padding: .3em 0;
}

div.game_player.player {
	border-top: 1px solid #ababab;
}

div.game_player.opponent {
	border-bottom: 1px solid #ababab;
}

div.player_clock {
	padding: 0 .2em;
}

div.active_clock {
	border-radius: 2px;
	color: white;
	background: #58992A;
}

div.critical_clock {
	background: #912222;
}

div.game_result {
	font-size: 1.2em;
	text-align: right;
	margin-bottom: .5em;
}

div.game_controls {
	display: flex;
	margin-top: .2em;
}

div.game_controls input {
	color: #404040;
	margin: 0 .2em 0 0;
	border-color: #b0b0b0;
	padding: .3em .6em;
	background: #f7f7f7;
}

div.game_controls input.disabled,
div.game_controls input.disabled:active,
div.game_controls input.disabled:hover {
	color: #9E9E9E;
}

div.game_chat {
	margin-top: .4em;
}

